--- a/MatchingAlg/index.html
+++ b/MatchingAlg/index.html
@@ -42,13 +42,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>Finden Sie Ihren passenden Job</h1>
+        <h1>Jobfinder</h1>
         <form id="job-form">
             <div id="question1" class="question">
-                <h2> Wie sind Ihre SAP and MS Office Kenntnisse ?</h2>
+                <h2>Besitzen SIe mathematisches und technisches Verständnis? </h2>
                 <div class="scale">
                     <label>
-                        <input type="radio" name="question1" value="1" required> Keine Kenntnisse vorhanden
+                        <input type="radio" name="question1" value="1" required> Keine 
                     </label>
                     <label>
                         <input type="radio" name="question1" value="2"> Schlecht
@@ -67,7 +67,7 @@
             </div>
 
             <div id="question2" class="question">
-                <h2>Berechnungen und Berichte auf Fehler kontrollieren</h2>
+                <h2>Sind Sie kreativ und haben Ideen für neue Designs?</h2>
                 <div class="scale">
                     <label>
                         <input type="radio" name="question2" value="1" required> Kein Interesse
@@ -90,7 +90,7 @@
             </div>
 
             <div id="question3" class="question">
-                <h2>Artikel und Beiträge für Medien (z.B. Social Media) verfassen</h2>
+                <h2>Haben Sie räumliches Vorstellungsvermögen</h2>
                 <div class="scale">
                     <label>
                         <input type="radio" name="question3" value="1" required> Kein Interesse
@@ -113,7 +113,7 @@
             </div>
 
             <div id="question4" class="question">
-                <h2>Probleme durch wissenschaftliche Untersuchungen analysieren</h2>
+                <h2>Arbeiten Sie gerne mit Kindern/Jugendlichen? </h2>
                 <div class="scale">
                     <label>
                         <input type="radio" name="question4" value="1" required> Kein Interesse
@@ -136,7 +136,7 @@
             </div>
 
             <div id="question5" class="question">
-                <h2>Sind sie bereit für die Übernahme der Verantwortung für Arbeitspakete im übertragenen Arbeitsumfeld?</h2>
+                <h2>Haben Sie eine hohe Stresskapazität?</h2>
                 <div class="scale">
                     <label>
                         <input type="radio" name="question5" value="1" required> Kein Interesse
@@ -159,7 +159,7 @@
             </div>
 
             <div id="question6" class="question">
-                <h2>Interessieren Sie sich für das Backend-Development (Service-orientiert, DDS-, TCP / UDP- und Client-Server)?</h2>
+                <h2>Besitzen Sie Durchsetzungsfähigkeit und Empathie?</h2>
                 <div class="scale">
                     <label>
                         <input type="radio" name="question6" value="1" required> Kein Interesse
@@ -182,7 +182,7 @@
             </div>
 
             <div id="question7" class="question">
-                <h2>Sicherstellung einer konsistenten Kommunikation der Strategie zwischen internen und externen Stakeholdern </h2>
+                <h2>Interessieren Sie sich für die Abläufe des menschlichen Organismus?</h2>
                 <div class="scale">
                     <label>
                         <input type="radio" name="question7" value="1" required> Kein Interesse
@@ -205,7 +205,7 @@
             </div>
 
             <div id="question8" class="question">
-                <h2>Besitzen Sie Projektmanagementfähigkeiten in funktionsübergreifenden Projekten? </h2>
+                <h2>Haben Sie Spaß dabei anderen Menschen zu helfen?</h2>
                 <div class="scale">
                     <label>
                         <input type="radio" name="question8" value="1" required> Kein Interesse
@@ -228,7 +228,7 @@
             </div>
 
             <div id="question9" class="question">
-                <h2>Besitzen Sie qusgeprägte Kommunikationsfähigkeiten? </h2>
+                <h2>Sind Sie sorgfältig und zuverlässig?</h2>
                 <div class="scale">
                     <label>
                         <input type="radio" name="question9" value="1" required> Kein Interesse
@@ -251,7 +251,7 @@
             </div>
 
             <div id="question10" class="question">
-                <h2>Haben Sie Interesse an der Entwicklung von Produktlebenszyklen sowie Service- und Logistikkonzepte? </h2>
+                <h2>Arbeiten Sie gerne im Team?</h2>
                 <div class="scale">
                     <label>
                         <input type="radio" name="question10" value="1" required> Kein Interesse
@@ -274,7 +274,7 @@
             </div>
 
             <div id="question11" class="question">
-                <h2>Haben Sie Interesse an der Durchführung von Präsentationen innerhalb/außerhalb  Hensoldt und sowie Erstellung von Reports? </h2>
+                <h2>Haben Sie Interesse an neuen Medikationen</h2>
                 <div class="scale">
                     <label>
                         <input type="radio" name="question11" value="1" required> Kein Interesse
